# coveragecontrol_sim

./: CMakeLists.txt  package.xml
include/coveragecontrol_sim/: centralized.hpp  centralized_cvt.hpp  clairvoyant_cvt.hpp  decentralized.hpp  decentralized_cvt.hpp  fake_robot.hpp  sim_robot.hpp  test.hpp  update_world.hpp  utils.hpp
launch/: centralized.yaml
src/: centralized.cpp  centralized_cvt.cpp  clairvoyant_cvt.cpp  decentralized_cvt.cpp  sim_centralized.cpp  update_world.cpp  update_world_node.cpp
